--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -188,3 +188,12 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
     color: #888;
   }
 }
+
+.select-actions {
+  margin-bottom: 10px;
+}
+
+.bulk-tags {
+  display: none;
+  margin-bottom: 10px;
+}
